fix: add overflow-y property to content grid for better scrolling behavior

--- a/src/app/components/contact/contact-form/contact-form.component.scss
+++ b/src/app/components/contact/contact-form/contact-form.component.scss
@@ -6,6 +6,7 @@
     grid-template-columns: 1fr 1fr;
     height: 100%;
     max-height: calc(100dvh - 125px - 1.5rem);
+    overflow-y: auto;
 
     @media (max-width: 1024px) {
       grid-template-columns: 1fr;
